Fixed project name not changing to beige when dark mode toggled (added selector in styles.css file)

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -313,6 +313,10 @@ footer {
   color: beige;
 }
 
+.body2 .project-name a {
+  color: beige;
+}
+
 /*  Media Queries  */
 
 @media only screen and (min-width: 1060px) and (max-width: 1280px) {
